# HTTPServer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: main.c  server.c  server.h
